# DarkMark

./: .editorconfig  .gitignore  CM_definitions.cmake  CM_dependencies.cmake  CM_package.cmake  CM_package_ubuntu.cmake  CM_source.cmake  CM_version.cmake  CMakeLists.txt  DarkMark.jucer  build_and_upload.sh  license.txt  readme.md  readme_windows.txt  version.txt
.github/: FUNDING.yml
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_core/: juce_core.cpp  juce_core.h
JuceLibraryCode/modules/juce_core/native/: juce_linux_SystemStats.cpp  juce_mac_ObjCHelpers.h  juce_posix_SharedCode.h  juce_win32_SystemStats.cpp  juce_win32_Threads.cpp
JuceLibraryCode/modules/juce_core/network/: juce_Socket.cpp
JuceLibraryCode/modules/juce_core/system/: juce_StandardHeader.h  juce_SystemStats.h
JuceLibraryCode/modules/juce_core/zip/zlib/: compress.c  crc32.c  (+7 more)
JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
JuceLibraryCode/modules/juce_cryptography/encryption/: juce_BlowFish.h
JuceLibraryCode/modules/juce_events/: juce_events.h
JuceLibraryCode/modules/juce_events/native/: juce_linux_Messaging.cpp  juce_win32_Messaging.cpp
JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
JuceLibraryCode/modules/juce_graphics/native/: juce_win32_DirectWriteTypeLayout.cpp
JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
JuceLibraryCode/modules/juce_gui_basics/drawables/: juce_SVGParser.cpp
JuceLibraryCode/modules/juce_gui_basics/filebrowser/: juce_FileChooser.h
JuceLibraryCode/modules/juce_gui_basics/layout/: juce_ComponentAnimator.cpp  juce_Grid.cpp  juce_GridItem.h  juce_SidePanel.h  juce_Viewport.cpp
JuceLibraryCode/modules/juce_gui_basics/lookandfeel/: juce_LookAndFeel_V4.cpp
JuceLibraryCode/modules/juce_gui_basics/menus/: juce_PopupMenu.cpp  juce_PopupMenu.h
JuceLibraryCode/modules/juce_gui_basics/native/: juce_android_Windowing.cpp  juce_linux_Windowing.cpp  juce_win32_Windowing.cpp
JuceLibraryCode/modules/juce_gui_basics/widgets/: juce_ComboBox.cpp  juce_TextEditor.cpp
JuceLibraryCode/modules/juce_gui_basics/windows/: juce_AlertWindow.cpp  juce_AlertWindow.h  juce_ComponentPeer.h  juce_DialogWindow.cpp  juce_DialogWindow.h  juce_TopLevelWindow.cpp
JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.cpp  juce_gui_extra.h
JuceLibraryCode/modules/juce_gui_extra/code_editor/: juce_CodeEditorComponent.cpp  juce_CodeEditorComponent.h
JuceLibraryCode/modules/juce_gui_extra/documents/: juce_FileBasedDocument.h
JuceLibraryCode/modules/juce_gui_extra/misc/: juce_BubbleMessageComponent.h  juce_ColourSelector.cpp  juce_ColourSelector.h  juce_LiveConstantEditor.h  juce_PushNotifications.h
JuceLibraryCode/modules/juce_gui_extra/native/: juce_android_PushNotifications.cpp  juce_ios_PushNotifications.cpp  juce_linux_X11_WebBrowserComponent.cpp  juce_mac_PushNotifications.cpp  juce_mac_SystemTrayIcon.cpp  juce_win32_WebBrowserComponent.cpp
src-classid/: CMakeLists.txt  ClassIdWnd.cpp  ClassIdWnd.hpp
src-darkmark/: CMakeLists.txt  DMCanvas.cpp  DMCanvas.hpp  DMContent.cpp  DMContent.hpp  DMContentDeleteRotateAndFlipImages.cpp  DMContentDeleteRotateAndFlipImages.hpp  DMContentFlipImages.cpp  DMContentFlipImages.hpp  DMContentImageFilenameSort.cpp  DMContentImageFilenameSort.hpp  DMContentImportTxt.cpp  DMContentImportTxt.hpp  DMContentMoveEmptyImages.cpp  DMContentMoveEmptyImages.hpp  DMContentReloadResave.cpp  DMContentReloadResave.hpp  DMContentResizeTLTR.cpp  DMContentResizeTLTR.hpp  DMContentReview.cpp  DMContentReview.hpp  DMContentReviewIoU.cpp  DMContentReviewIoU.hpp  DMContentRotateImages.cpp  DMContentRotateImages.hpp  DMContentStatistics.cpp  DMContentStatistics.hpp  DMWnd.cpp  DMWnd.hpp
src-darknet/: CMakeLists.txt  CfgHandler.cpp  CfgHandler.hpp  DarknetImages.cpp  DarknetWnd.cpp  DarknetWnd.hpp  WndCfgTemplates.cpp  WndCfgTemplates.hpp  yolo_anchors.cpp  yolo_anchors.hpp
src-dox/: 01_mainpage.dox  02_summary.dox  03_changelist.dox  03_license.dox  04_building.dox  05_cli_options.dox  05_keyboard.dox  06_data_augmentation.dox  06_image_markup.dox  06_image_size.dox  08_configuration.dox  08_data_augmentation.dox  09_configuration.dox  10_darknet_output.dox  CMakeLists.txt  Doxyfile.in  footer_ccoderun.html  header_ccoderun.html
src-dox/darknet_output/: darknet_images.dox
src-dox/data_augmentation/: 01_colour.dox  02_misc.dox  03_rotation.dox  rotate_and_flip.dox
src-find-dup/: CMakeLists.txt  find_duplicates.cpp
src-juce/: CMakeLists.txt
src-launcher/: CMakeLists.txt  PdfImportWindow.cpp  PdfImportWindow.hpp  StartupCanvas.cpp  StartupCanvas.hpp  StartupWnd.cpp  StartupWnd.hpp  VideoImportWindow.cpp  VideoImportWindow.hpp
src-macos/: build_icns.sh  darkmark.icns
src-main/: CMakeLists.txt  DMAppMenuModel.hpp  DarkMark.hpp  DarkMarkApp.cpp  DarkMarkApp.hpp  main.cpp
src-test/: CMakeLists.txt  TestMain.cpp  TestMark.cpp
src-tools/: AboutWnd.cpp  AboutWnd.hpp  Bitmaps.cpp  Bitmaps.h  Bitmaps.hpp  CMakeLists.txt  Cfg.cpp  Cfg.hpp  CrosshairComponent.cpp  CrosshairComponent.hpp  Log.cpp  Log.hpp  Mark.cpp  Mark.hpp  Notebook.cpp  Notebook.hpp  ProjectInfo.cpp  ProjectInfo.hpp  Text.cpp  Text.hpp  Tools.cpp  Tools.hpp
src-ubuntu/: CMakeLists.txt  ccoderun-darkmark.desktop.in  postinst  postrm
src-windows/: appicon.aps  appicon.rc
src-wnd/: CMakeLists.txt  CrosshairComponent.cpp  CrosshairComponent.hpp  DMAboutWnd.cpp  DMAboutWnd.hpp  DMCanvas.cpp  DMCanvas.hpp  DMContent.cpp  DMContent.hpp  DMContentImageFilenameSort.cpp  DMContentImageFilenameSort.hpp  DMContentReloadResave.cpp  DMContentReloadResave.hpp  DMContentReview.cpp  DMContentReview.hpp  DMContentRotateImages.cpp  DMContentRotateImages.hpp  DMContentStatistics.cpp  DMContentStatistics.hpp  DMCorner.cpp  DMCorner.hpp  DMJumpWnd.cpp  DMJumpWnd.hpp  DMReviewCanvas.cpp  DMReviewCanvas.hpp  DMReviewIoUWnd.cpp  DMReviewIoUWnd.hpp  DMReviewWnd.cpp  DMReviewWnd.hpp  DMStatsWnd.cpp  DMStatsWnd.hpp  DMWnd.cpp  DMWnd.hpp  DarknetWnd.cpp  DarknetWnd.hpp  FilterWnd.cpp  FilterWnd.hpp  ProjectInfo.cpp  ScrollField.cpp  ScrollField.hpp  (+6 more)
(+2 files in other folders)
